fix(sui-studio): spacing

--- a/packages/sui-studio/src/components/preview/_style.scss
+++ b/packages/sui-studio/src/components/preview/_style.scss
@@ -1,7 +1,7 @@
 @import "../../../doc/index";
 
 .sui-StudioPreview {
-  padding: 10px;
+  padding: 1em;
   &-error {
     background-color: #c10000;
     color: #f0f0f0;
